--- a/config/local.yml
+++ b/config/local.yml
@@ -11,7 +11,7 @@ metric_server:
   address: "127.0.0.1"
 
 database:
-  host: "postgres"
+  host: "127.0.0.1"
   port: 5432
   user: "postgres"
   password: "postgres"
