--- a/sqlc.yml
+++ b/sqlc.yml
@@ -8,8 +8,20 @@ sql:
         package: "postgres"
         out: "internal/infrastructure/repository/postgres"
         sql_package: "pgx/v5"
+        emit_json_tags: true
+        emit_pointers_for_null_types: true
         overrides:
           - db_type: "uuid"
             go_type:
               import: "github.com/google/uuid"
               type: "UUID"
+          - db_type: "pg_catalog.timestamp"
+            go_type:
+              type: "Time"
+              import: "time"
+          - db_type: "pg_catalog.time"
+            go_type:
+              type: "Time"
+              import: "time"
+              pointer: true
+            nullable: true
