--- a/config/prod.yml
+++ b/config/prod.yml
@@ -11,8 +11,10 @@ metric_server:
   address: "127.0.0.1"
 
 database:
+  engine: "postgres"
   host: "127.0.0.1"
   port: 5432
   user: "postgres"
   password: "postgres"
   name: "postgres"
+  migration_dir: "./sql/migrations"
